--- a/content/themes/orca/partials/social_footer.hbs
+++ b/content/themes/orca/partials/social_footer.hbs
@@ -1,45 +1,45 @@
-{{! 
+{{!
 
 	SOCIAL - FOOTER
-	! Configuration of this file is required. 
+	! Configuration of this file is required.
 	- Add author social links here
 	- These social links will appear in the page footer
-	- Remove any unwanted links 
+	- Remove any unwanted links
 
 }}
 
-	{{! TWITTER }}
-	<a href="http://twitter.com" target="_blank" class="social social_solid twitter"><i class="fa fa-twitter"></i></a>
+{{! LINKEDIN }}
+<a href="https://linkedin.com/in/toddheslin" target="_blank" class="social social_outline linkedin"><i class="fa fa-linkedin"></i></a>
 
-	{{! FACEBOOK }}
-	<a href="http://facebook.com" target="_blank" class="social social_solid facebook"><i class="fa fa-facebook"></i></a>
+{{! SKYPE }}
+<a href="skype:toddheslin?call" target="_blank" class="social social_outline skype"><i class="fa fa-skype"></i></a>
 
-	{{! GOOGLE+ }}
-	<a href="http://plus.google.com" target="_blank" class="social social_solid google"><i class="fa fa-google-plus"></i></a>
+{{! INSTAGRAM }}
+<a href="http://instagram.com/beingremarkable" target="_blank" class="social social_outline instagram"><i class="fa fa-instagram"></i></a>
 
-	{{! DRIBBBLE }}
-	<a href="http://dribbble.com" target="_blank" class="social social_solid dribbble"><i class="fa fa-dribbble"></i></a>
+{{! GITHUB }}
+<a href="http://github.com/toddheslin" target="_blank" class="social social_outline github"><i class="fa fa-github"></i></a>
 
-	{{! INSTAGRAM }}
-	<a href="http://instagram.com" target="_blank" class="social social_solid instagram"><i class="fa fa-instagram"></i></a>
+{{! TWITTER }}
+<a href="http://twitter.com/toddheslin" target="_blank" class="social social_outline twitter"><i class="fa fa-twitter"></i></a>
 
-	{{! GITHUB }}
-	{{! <a href="http://github.com" target="_blank" class="social social_solid github"><i class="fa fa-github"></i></a> }}
+{{! FACEBOOK }}
+<!-- <a href="http://facebook.com" target="_blank" class="social social_outline facebook"><i class="fa fa-facebook"></i></a> -->
 
-	{{! YOUTUBE }}
-	{{! <a href="http://youtube.com" target="_blank" class="social social_solid youtube"><i class="fa fa-youtube"></i></a> }}
+{{! GOOGLE+ }}
+<!-- <a href="http://plus.google.com" target="_blank" class="social social_outline google"><i class="fa fa-google-plus"></i></a> -->
 
-	{{! PINTEREST }}
-	{{! <a href="http://pinterest.com" target="_blank" class="social social_solid pinterest"><i class="fa fa-pinterest"></i></a> }}
+{{! DRIBBBLE }}
+<!-- <a href="http://dribbble.com" target="_blank" class="social social_outline dribbble"><i class="fa fa-dribbble"></i></a> -->
 
-	{{! LINKEDIN }}
-	{{! <a href="http://linkedin.com" target="_blank" class="social social_solid linkedin"><i class="fa fa-linkedin"></i></a> }}
+{{! YOUTUBE }}
+<!-- <a href="http://youtube.com/startupguy" target="_blank" class="social social_outline youtube"><i class="fa fa-youtube"></i></a> -->
 
-	{{! SKYPE }}
-	{{! <a href="http://skype.com" target="_blank" class="social social_solid skype"><i class="fa fa-skype"></i></a> }}
+{{! PINTEREST }}
+<!-- <a href="http://pinterest.com" target="_blank" class="social social_outline pinterest"><i class="fa fa-pinterest"></i></a> -->
 
-	{{! TUMBLR }}
-	{{! <a href="http://tumblr.com" target="_blank" class="social social_solid tumblr"><i class="fa fa-tumblr"></i></a>} }
+{{! TUMBLR }}
+<!-- <a href="http://tumblr.com" target="_blank" class="social social_outline tumblr"><i class="fa fa-tumblr"></i></a> -->
 
-	{{! RSS - LEAVE DEFAULT}}
-	<a href="{{@blog.url}}/rss/" target="_blank" class="social social_solid rss"><i class="fa fa-rss"></i></a>
+{{! RSS - LEAVE DEFAULT }}
+<a href="{{@blog.url}}/rss/" target="_blank" class="social social_outline rss"><i class="fa fa-rss"></i></a>
