--- a/content/themes/orca/partials/widget_tags.hbs
+++ b/content/themes/orca/partials/widget_tags.hbs
@@ -1,4 +1,4 @@
-{{! 
+{{!
 
 	TAG CLOUD
 	! Configuration of this file is required.
@@ -12,16 +12,9 @@
 	<div class="widget tag_widget">
 		<ul class="tags_list">
 			{{! <li><a href="/tag/taghere">taghere</a></li> }}
-			<li><a href="{{@blog.url}}/tag/frontend">Frontend</a></li>
+			<li><a href="{{@blog.url}}/tag/entrepreneurship">Entrepreneurship</a></li>
+			<li><a href="{{@blog.url}}/tag/analytics">Analytics</a></li>
 			<li><a href="{{@blog.url}}/tag/development">Development</a></li>
-			<li><a href="{{@blog.url}}/tag/sass">SASS</a></li>
-			<li><a href="{{@blog.url}}/tag/grunt">Grunt</a></li>
-			<li><a href="{{@blog.url}}/tag/javascript">JavaScript</a></li>
-			<li><a href="{{@blog.url}}/tag/server">Server</a></li>
-			<li><a href="{{@blog.url}}/tag/software">Software</a></li>
-			<li><a href="{{@blog.url}}/tag/ghost">Ghost</a></li>
-			<li><a href="{{@blog.url}}/tag/html%20css">HTML CSS</a></li>
-			<li><a href="{{@blog.url}}/tag/lifecycle">Lifecycle</a></li>
-			<li><a href="{{@blog.url}}/tag/project">Project</a></li>
+			<li><a href="{{@blog.url}}/tag/crowdfunding">Crowdfunding</a></li>
 		</ul>
 	</div>
