Changed sideback hyphens

--- a/content/themes/orca/src/sass/_sidebar.scss
+++ b/content/themes/orca/src/sass/_sidebar.scss
@@ -45,6 +45,10 @@
 		line-height: 36px;
 		margin: 0;
 		color: #2b2626;
+		-webkit-hyphens: none;
+		-moz-hyphens: none;
+		hyphens: none;
+		-ms-hyphens: none;
 	}
 }
 
