updated tags and author positioning

--- a/content/themes/orca/page.hbs
+++ b/content/themes/orca/page.hbs
@@ -1,7 +1,7 @@
-{{! 
-	
+{{!
+
 	PAGE TEMPLATE
-	! Configuration of this file is optional. 
+	! Configuration of this file is optional.
 
 }}
 {{!< default}}
@@ -30,8 +30,8 @@
 						{{> post_header}}
 						<div class="postcontents">
 							{{content}}
-						</div> 
-						{{> post_footer}}
+						</div>
+						<!-- {{> post_footer}} -->
 					</article>
 
 					{{! WIDGET - AUTHOR INFO }}
