--- a/content/themes/orca/partials/footer.hbs
+++ b/content/themes/orca/partials/footer.hbs
@@ -1,16 +1,15 @@
-{{! 
-	
+{{!
+
 	FOOTER
-	- Configuration of this file is not required. 
+	- Configuration of this file is not required.
 
 }}
 
 	<footer>
 		<div class="wrapper">
 			<div class="copyright">
-				Copyright &copy; <a href="{{@blog.url}}">{{@blog.title}}</a>. {{date format="YYYY"}} &bull; All rights reserved.<br>
+				Copyright &copy; <a href="{{@blog.url}}">{{@blog.title}}</a> {{date format="YYYY"}} &bull; All rights reserved.<br>
 				<small>Proudly published with <a href="http://ghost.io" target="_blank">Ghost</a>.</small><br>
-				<small class="ecko"><a href="http://ecko.me/themes/ghost/orca/" target="_blank">Orca Ghost Theme</a> by <a href="http://ecko.me/" target="_blank">EckoThemes</a></small>
 			</div>
 			<div class="sociallinks">
 				{{> social_footer}}
