--- a/content/themes/orca/partials/widget_tags.hbs
+++ b/content/themes/orca/partials/widget_tags.hbs
@@ -12,6 +12,7 @@
 	<div class="widget tag_widget">
 		<ul class="tags_list">
 			{{! <li><a href="/tag/taghere">taghere</a></li> }}
+			<li><a href="{{@blog.url}}/tag/reflections">Reflections</a></li>
 			<li><a href="{{@blog.url}}/tag/entrepreneurship">Entrepreneurship</a></li>
 			<li><a href="{{@blog.url}}/tag/analytics">Analytics</a></li>
 			<li><a href="{{@blog.url}}/tag/development">Development</a></li>
