changing button text

--- a/content/themes/orca/partials/postformat_standard.hbs
+++ b/content/themes/orca/partials/postformat_standard.hbs
@@ -1,7 +1,7 @@
-{{! 
-	
+{{!
+
 	POST FORMAT - STANDARD
-	- Configuration of this file is not required. 
+	- Configuration of this file is not required.
 
 }}
 
@@ -26,6 +26,6 @@
 			<p>{{excerpt words="76"}}&hellip;</p>
 		</div>
 		<div class="footer">
-			<a href="{{url}}" class="largesolid orange left">Read More</a>
+			<a href="{{url}}" class="largesolid orange left">Keep Reading</a>
 		</div>
 	</article>
