--- a/content/themes/orca/partials/postformat_feature.hbs
+++ b/content/themes/orca/partials/postformat_feature.hbs
@@ -1,7 +1,7 @@
-{{! 
-	
+{{!
+
 	POST FORMAT - FEATURE
-	- Configuration of this file is not required. 
+	- Configuration of this file is not required.
 
 }}
 
@@ -29,6 +29,6 @@
 			{{content words="120"}}
 		</div>
 		<div class="footer">
-			<a href="{{url}}" class="largesolid orange left">Read More</a>
+			<a href="{{url}}" class="largesolid orange left">Keep Reading</a>
 		</div>
 	</article>
