changes to author template

--- a/content/themes/orca/partials/postformat_standard.hbs
+++ b/content/themes/orca/partials/postformat_standard.hbs
@@ -9,8 +9,8 @@
 		<h1><a href="{{url}}">{{{title}}}</a></h1>
 		<div class="info">
 			<div class="left">
-				{{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}
-				{{author}}
+				<!-- {{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}
+				{{author}} -->
 			</div>
 			<div class="right">
 				<a href="{{url}}" class="date"><i class="fa fa-clock-o"></i>{{date format="MMMM Do, YYYY"}}</a>
