--- a/content/themes/orca/partials/post_header.hbs
+++ b/content/themes/orca/partials/post_header.hbs
@@ -1,7 +1,7 @@
-{{! 
-	
+{{!
+
 	POST - HEADER
-	- Configuration of this file is not required. 
+	- Configuration of this file is not required.
 
 }}
 
@@ -21,7 +21,8 @@
 		{{/has}}
 		<div class="info">
 			<div class="left">
-				<a href="{{url}}" class="author">{{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}{{author.name}}</a>
+				<!-- Removing author above each post -->
+				<!-- <a href="{{url}}" class="author">{{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}{{author.name}}</a> -->
 			</div>
 			<div class="right">
 				<a href="{{url}}" class="date"><i class="fa fa-clock-o"></i>{{date format="MMMM Do, YYYY"}}</a>
