--- a/content/themes/orca/partials/postformat_feature.hbs
+++ b/content/themes/orca/partials/postformat_feature.hbs
@@ -12,8 +12,8 @@
 		</a>
 		<div class="info">
 			<div class="left">
-				{{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}
-				{{author}}
+				<!-- {{#if author.image}}<img src="{{author.image}}" alt="author" class="minigravatar">{{/if}}
+				{{author}} -->
 			</div>
 			<div class="right">
 				<a href="{{url}}" class="date"><i class="fa fa-clock-o"></i>{{date format="MMMM Do, YYYY"}}</a>
